tests/snapshots/integration__integration_tests__post_start_commands__both_create_and_start.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpKHkSRe
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1m[32mfeature[0m[0m
  [2mPath: [REPO]/../test-repo.feature[0m

To enable automatic cd, run: wt configure-shell

----- stderr -----
🔄 [36mExecuting (post-create):[0m
[40m [0m echo 'Setup done' > setup.txt
🔄 [36mStarting (background): sleep 0.5 && echo 'Server running' > server.txt[0m
  [2m→ Logs: .git/wt-logs/post-start-[NAME]-[TIMESTAMP].log[0m
