tests/snapshots/integration__integration_tests__post_start_commands__execute_with_post_start.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
    - "--execute"
    - "echo 'Execute flag' > execute.txt"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpyp4YON
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1m[32mfeature[0m[0m
  [2mPath: [REPO]/../test-repo.feature[0m


----- stderr -----
🔄 [36mStarting (background): echo 'Background task' > background.txt[0m
  [2m→ Logs: .git/wt-logs/post-start-[NAME]-[TIMESTAMP].log[0m
