tests/snapshots/integration__integration_tests__post_start_commands__post_create_template_expansion.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature/test
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpEM2Izh/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mExecuting (post-create):[0m
[40m [0m echo 'Repo: test-repo' > info.txt

🔄 [36mExecuting (post-create):[0m
[40m [0m echo 'Branch: feature-test' >> info.txt

🔄 [36mExecuting (post-create):[0m
[40m [0m echo 'Worktree:
[40m [0m [REPO].feature-test'
[40m [0m >> info.txt

🔄 [36mExecuting (post-create):[0m
[40m [0m echo 'Root:
[40m [0m [REPO]'
[40m [0m >> info.txt

✅ [32mCreated new worktree for [1mfeature/test[0m at [REPO].feature-test[0m

To enable automatic cd, run: wt configure-shell

----- stderr -----
